--- a/net-snmp/man/netsnmp_agent.3
+++ b/net-snmp/man/netsnmp_agent.3
@@ -1,10 +1,10 @@
-.TH "The Net-SNMP agent" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "The Net-SNMP agent" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_agent \-
+The Net-SNMP agent \- 
 .PP
-The snmp agent responds to SNMP queries from management stations.
+The snmp agent responds to SNMP queries from management stations.  
 
 .SS "Modules"
 
@@ -12,10 +12,9 @@ The snmp agent responds to SNMP queries from management stations.
 .ti -1c
 .RI "\fBNet-SNMP Agent handler and extensibility API\fP"
 .br
-.RI "\fIThe basic theory goes something like this: In the past, with the original mib module api (which derived from the original CMU SNMP code) the underlying mib modules were passed very little information (only the truly most basic information about a request). \fP"
 .PP
-.in +1c
 
+.RI "\fIThe basic theory goes something like this: In the past, with the original mib module api (which derived from the original CMU SNMP code) the underlying mib modules were passed very little information (only the truly most basic information about a request). \fP"
 .ti -1c
 .RI "\fBMaintain a registry of MIB subtrees, together with related information regarding mibmodule, sessions, etc\fP"
 .br
