--- a/net-snmp/man/netsnmp_asn1_packet_parse.3
+++ b/net-snmp/man/netsnmp_asn1_packet_parse.3
@@ -1,10 +1,11 @@
-.TH "asn1 parsing and datatype manipulation routines." 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "asn1 parsing and datatype manipulation routines." 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-asn1 parsing and datatype manipulation routines. \- Note on.  
-
+asn1 parsing and datatype manipulation routines. \- 
 .PP
+Note on.  
+
 .SS "Defines"
 
 .in +1c
@@ -85,10 +86,10 @@ asn1 parsing and datatype manipulation routines. \- Note on.
 .RI "u_char * \fBasn_build_bitstring\fP (u_char *data, size_t *datalength, u_char type, const u_char *str, size_t strlength)"
 .br
 .ti -1c
-.RI "u_char * \fBasn_parse_unsigned_int64\fP (u_char *data, size_t *datalength, u_char *type, struct counter64 *cp, size_t countersize)"
+.RI "u_char * \fBasn_parse_unsigned_int64\fP (u_char *data, size_t *datalength, u_char *type, struct \fBcounter64\fP *cp, size_t countersize)"
 .br
 .ti -1c
-.RI "u_char * \fBasn_build_unsigned_int64\fP (u_char *data, size_t *datalength, u_char type, const struct counter64 *cp, size_t countersize)"
+.RI "u_char * \fBasn_build_unsigned_int64\fP (u_char *data, size_t *datalength, u_char type, const struct \fBcounter64\fP *cp, size_t countersize)"
 .br
 .ti -1c
 .RI "int \fBasn_realloc\fP (u_char **pkt, size_t *pkt_len)"
@@ -200,9 +201,7 @@ IS EQUIVALENT TO:
  
 .SH "Define Documentation"
 .PP 
-.SS "#define CHECK_OVERFLOW_S(x, y)"
-.PP
-\fBValue:\fP
+.SS "#define CHECK_OVERFLOW_S(x, y)"\fBValue:\fP
 .PP
 .nf
 do { int trunc = 0;                     \
@@ -219,9 +218,7 @@ do { int trunc = 0;                     \
 .fi
 .PP
 Definition at line 214 of file asn1.c.
-.SS "#define CHECK_OVERFLOW_U(x, y)"
-.PP
-\fBValue:\fP
+.SS "#define CHECK_OVERFLOW_U(x, y)"\fBValue:\fP
 .PP
 .nf
 do {                                    \
