--- a/net-snmp/man/netsnmp_container.3
+++ b/net-snmp/man/netsnmp_container.3
@@ -1,17 +1,17 @@
-.TH "container" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "container" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-container \- Net-SNMP null container
+container \- 
 .SS "Modules"
 
 .in +1c
 .ti -1c
 .RI "\fBnull_container\fP"
 .br
-.RI "\fIHelps you implement specialized containers. \fP"
 .PP
 
+.RI "\fIHelps you implement specialized containers. \fP"
 .in -1c
 .SH "Author"
 .PP 
