--- a/net-snmp/man/netsnmp_data_list.3
+++ b/net-snmp/man/netsnmp_data_list.3
@@ -1,4 +1,4 @@
-.TH "generic linked-list data handling with a string as a key." 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "generic linked-list data handling with a string as a key." 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -7,7 +7,7 @@ generic linked-list data handling with a string as a key. \-
 
 .in +1c
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_free_list_data\fP (\fBnetsnmp_data_list\fP *node)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_free_list_data\fP (\fBnetsnmp_data_list\fP *\fBnode\fP)"
 .br
 .RI "\fIfrees the data and a name at a given data_list node. \fP"
 .ti -1c
@@ -19,11 +19,11 @@ generic linked-list data handling with a string as a key. \-
 .br
 .RI "\fIadds creates a data_list node given a name, data and a free function ptr. \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_add_list_data\fP (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_add_list_data\fP (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *\fBnode\fP)"
 .br
 .RI "\fIadds data to a datalist \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_data_list_add_node\fP (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_data_list_add_node\fP (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *\fBnode\fP)"
 .br
 .RI "\fIadds data to a datalist \fP"
 .ti -1c
@@ -41,7 +41,7 @@ generic linked-list data handling with a string as a key. \-
 .ti -1c
 .RI "int \fBnetsnmp_remove_list_node\fP (\fBnetsnmp_data_list\fP **realhead, const char *name)"
 .br
-.RI "\fIRemoves a named node from a data_list (and frees it). \fP"
+.RI "\fIRemoves a named node from a data_list (and frees it) \fP"
 .ti -1c
 .RI "void \fBnetsnmp_register_save_list\fP (\fBnetsnmp_data_list\fP **datalist, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr, Netsnmp_Read_List_Data *data_list_read_ptr, Netsnmp_Free_List_Data *data_list_free_ptr)"
 .br
@@ -61,11 +61,9 @@ generic linked-list data handling with a string as a key. \-
 .in -1c
 .SH "Function Documentation"
 .PP 
-.SS "NETSNMP_INLINE void netsnmp_add_list_data (\fBnetsnmp_data_list\fP ** head, \fBnetsnmp_data_list\fP * node)"
+.SS "NETSNMP_INLINE void netsnmp_add_list_data (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
 .PP
-adds data to a datalist 
-.PP
-depreciated: use \fBnetsnmp_data_list_add_node()\fP
+adds data to a datalist depreciated: use \fBnetsnmp_data_list_add_node()\fP
 .PP
 \fBNote:\fP
 .RS 4
@@ -81,12 +79,10 @@ netsnmp_data_list_add_node is preferred
 .PP
 
 .PP
-Definition at line 83 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_create_data_list (const char * name, void * data, Netsnmp_Free_List_Data * beer)"
+Definition at line 87 of file data_list.c.
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_create_data_list (const char *name, void *data, Netsnmp_Free_List_Data *beer)"
 .PP
-adds creates a data_list node given a name, data and a free function ptr. 
-.PP
-\fBParameters:\fP
+adds creates a data_list node given a name, data and a free function ptr. \fBParameters:\fP
 .RS 4
 \fIname\fP the name of the node to cache the data. 
 .br
@@ -107,11 +103,9 @@ a newly created data_list node which can be given to the netsnmp_add_list_data f
 \fBdelayed_instance.c\fP.
 .PP
 Definition at line 60 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_data_list_add_data (\fBnetsnmp_data_list\fP ** head, const char * name, void * data, Netsnmp_Free_List_Data * beer)"
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_data_list_add_data (\fBnetsnmp_data_list\fP **head, const char *name, void *data, Netsnmp_Free_List_Data *beer)"
 .PP
-adds data to a datalist 
-.PP
-\fBParameters:\fP
+adds data to a datalist \fBParameters:\fP
 .RS 4
 \fIhead\fP a pointer to the head node of a data_list 
 .br
@@ -129,12 +123,10 @@ a newly created data_list node which was inserted in the list
 .PP
 
 .PP
-Definition at line 137 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_data_list_add_node (\fBnetsnmp_data_list\fP ** head, \fBnetsnmp_data_list\fP * node)"
+Definition at line 141 of file data_list.c.
+.SS "NETSNMP_INLINE void netsnmp_data_list_add_node (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
 .PP
-adds data to a datalist 
-.PP
-\fBParameters:\fP
+adds data to a datalist \fBParameters:\fP
 .RS 4
 \fIhead\fP a pointer to the head node of a data_list 
 .br
@@ -143,12 +135,10 @@ adds data to a datalist
 .PP
 
 .PP
-Definition at line 93 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_free_all_list_data (\fBnetsnmp_data_list\fP * head)"
+Definition at line 97 of file data_list.c.
+.SS "NETSNMP_INLINE void netsnmp_free_all_list_data (\fBnetsnmp_data_list\fP *head)"
 .PP
-frees all data and nodes in a list. 
-.PP
-\fBParameters:\fP
+frees all data and nodes in a list. \fBParameters:\fP
 .RS 4
 \fIhead\fP the top node of the list to be freed. 
 .RE
@@ -156,11 +146,9 @@ frees all data and nodes in a list.
 
 .PP
 Definition at line 42 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_free_list_data (\fBnetsnmp_data_list\fP * node)"
+.SS "NETSNMP_INLINE void netsnmp_free_list_data (\fBnetsnmp_data_list\fP *node)"
 .PP
-frees the data and a name at a given data_list node. 
-.PP
-Note that this doesn't free the node itself. 
+frees the data and a name at a given data_list node. Note that this doesn't free the node itself. 
 .PP
 \fBParameters:\fP
 .RS 4
@@ -170,11 +158,9 @@ Note that this doesn't free the node itself.
 
 .PP
 Definition at line 26 of file data_list.c.
-.SS "NETSNMP_INLINE void* netsnmp_get_list_data (\fBnetsnmp_data_list\fP * head, const char * name)"
+.SS "NETSNMP_INLINE void* netsnmp_get_list_data (\fBnetsnmp_data_list\fP *head, const char *name)"
 .PP
-returns a data_list node's data for a given name within a data_list 
-.PP
-\fBParameters:\fP
+returns a data_list node's data for a given name within a data_list \fBParameters:\fP
 .RS 4
 \fIhead\fP the head node of a data_list 
 .br
@@ -188,12 +174,10 @@ a pointer to the data cached at that node
 .PP
 
 .PP
-Definition at line 162 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_get_list_node (\fBnetsnmp_data_list\fP * head, const char * name)"
+Definition at line 166 of file data_list.c.
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_get_list_node (\fBnetsnmp_data_list\fP *head, const char *name)"
 .PP
-returns a data_list node for a given name within a data_list 
-.PP
-\fBParameters:\fP
+returns a data_list node for a given name within a data_list \fBParameters:\fP
 .RS 4
 \fIhead\fP the head node of a data_list 
 .br
@@ -207,12 +191,10 @@ a pointer to the data_list node
 .PP
 
 .PP
-Definition at line 180 of file data_list.c.
-.SS "void netsnmp_read_data_callback (const char * token, char * line)"
+Definition at line 184 of file data_list.c.
+.SS "void netsnmp_read_data_callback (const char *token, char *line)"
 .PP
-intended to be registerd as a .conf parser It should be registered using: 
-.PP
-register_app_config_handler('token', netsnmp_read_data_callback, XXX)
+intended to be registerd as a .conf parser It should be registered using: register_app_config_handler('token', netsnmp_read_data_callback, XXX)
 .PP
 where INFO_POINTER is a pointer to a netsnmp_data_list_saveinfo object containing apporpriate registration information 
 .PP
@@ -223,12 +205,10 @@ make netsnmp_read_data_callback deal with a free routine
 .PP
 
 .PP
-Definition at line 333 of file data_list.c.
-.SS "void netsnmp_register_save_list (\fBnetsnmp_data_list\fP ** datalist, const char * type, const char * token, Netsnmp_Save_List_Data * data_list_save_ptr, Netsnmp_Read_List_Data * data_list_read_ptr, Netsnmp_Free_List_Data * data_list_free_ptr)"
+Definition at line 337 of file data_list.c.
+.SS "void netsnmp_register_save_list (\fBnetsnmp_data_list\fP **datalist, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr, Netsnmp_Read_List_Data *data_list_read_ptr, Netsnmp_Free_List_Data *data_list_free_ptr)"
 .PP
-registers to store a data_list set of data at persistent storage time 
-.PP
-\fBParameters:\fP
+registers to store a data_list set of data at persistent storage time \fBParameters:\fP
 .RS 4
 \fIdatalist\fP the data to be saved 
 .br
@@ -252,12 +232,10 @@ netsnmp_register_save_list should handle the same token name being saved from di
 .PP
 
 .PP
-Definition at line 231 of file data_list.c.
-.SS "int netsnmp_remove_list_node (\fBnetsnmp_data_list\fP ** realhead, const char * name)"
+Definition at line 235 of file data_list.c.
+.SS "int netsnmp_remove_list_node (\fBnetsnmp_data_list\fP **realhead, const char *name)"
 .PP
-Removes a named node from a data_list (and frees it). 
-.PP
-\fBParameters:\fP
+Removes a named node from a data_list (and frees it) \fBParameters:\fP
 .RS 4
 \fIrealhead\fP a pointer to the head node of a data_list 
 .br
@@ -271,25 +249,21 @@ Removes a named node from a data_list (and frees it).
 .PP
 
 .PP
-Definition at line 198 of file data_list.c.
-.SS "int netsnmp_save_all_data (\fBnetsnmp_data_list\fP * head, const char * type, const char * token, Netsnmp_Save_List_Data * data_list_save_ptr)"
+Definition at line 202 of file data_list.c.
+.SS "int netsnmp_save_all_data (\fBnetsnmp_data_list\fP *head, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr)"
 .PP
-intended to be called as a callback during persistent save operations. 
+intended to be called as a callback during persistent save operations. See the netsnmp_save_all_data_callback for where this is typically used. 
 .PP
-See the netsnmp_save_all_data_callback for where this is typically used. 
+Definition at line 301 of file data_list.c.
+.SS "int netsnmp_save_all_data_callback (intmajor, intminor, void *serverarg, void *clientarg)"
 .PP
-Definition at line 297 of file data_list.c.
-.SS "int netsnmp_save_all_data_callback (int major, int minor, void * serverarg, void * clientarg)"
-.PP
-intended to be registerd as a callback operation. 
-.PP
-It should be registered using:
+intended to be registerd as a callback operation. It should be registered using:
 .PP
 snmp_register_callback(SNMP_CALLBACK_LIBRARY, SNMP_CALLBACK_STORE_DATA, netsnmp_save_all_data_callback, INFO_POINTER);
 .PP
 where INFO_POINTER is a pointer to a netsnmp_data_list_saveinfo object containing apporpriate registration information 
 .PP
-Definition at line 280 of file data_list.c.
+Definition at line 284 of file data_list.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
