--- a/net-snmp/man/netsnmp_instance.3
+++ b/net-snmp/man/netsnmp_instance.3
@@ -1,10 +1,11 @@
-.TH "instance" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "instance" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-instance \- Process individual MIB instances easily.  
-
+instance \- 
 .PP
+Process individual MIB instances easily.  
+
 .SS "Functions"
 
 .in +1c
@@ -98,9 +99,7 @@ Process individual MIB instances easily.
 .PP 
 .SS "\fBnetsnmp_mib_handler\fP* netsnmp_get_instance_handler (void)"
 .PP
-Creates an instance helper handler, calls netsnmp_create_handler, which then could be registered, using \fBnetsnmp_register_handler()\fP. 
-.PP
-\fBReturns:\fP
+Creates an instance helper handler, calls netsnmp_create_handler, which then could be registered, using \fBnetsnmp_register_handler()\fP. \fBReturns:\fP
 .RS 4
 Returns a pointer to a netsnmp_mib_handler struct which contains the handler's name and the access method 
 .RE
@@ -108,18 +107,14 @@ Returns a pointer to a netsnmp_mib_handler struct which contains the handler's n
 
 .PP
 Definition at line 48 of file instance.c.
-.SS "int netsnmp_instance_num_file_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"
-.PP
-
+.SS "int netsnmp_instance_num_file_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"
 .PP
 fall through 
 .PP
-Definition at line 711 of file instance.c.
-.SS "int netsnmp_register_instance (\fBnetsnmp_handler_registration\fP * reginfo)"
+Definition at line 713 of file instance.c.
+.SS "int netsnmp_register_instance (\fBnetsnmp_handler_registration\fP *reginfo)"
 .PP
-This function registers an instance helper handler, which is a way of registering an exact OID such that GENEXT requests are handled entirely by the helper. 
-.PP
-First need to inject it into the calling chain of the handler defined by the netsnmp_handler_registration struct, reginfo. The new handler is injected at the top of the list and will be the new handler to be called first. This function also injects a serialize handler before actually calling netsnmp_register_handle, registering reginfo.
+This function registers an instance helper handler, which is a way of registering an exact OID such that GENEXT requests are handled entirely by the helper. First need to inject it into the calling chain of the handler defined by the netsnmp_handler_registration struct, reginfo. The new handler is injected at the top of the list and will be the new handler to be called first. This function also injects a serialize handler before actually calling netsnmp_register_handle, registering reginfo.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -138,11 +133,9 @@ MIB_REGISTERED_OK is returned if the registration was a success. Failures are MI
 \fBdelayed_instance.c\fP.
 .PP
 Definition at line 73 of file instance.c.
-.SS "int netsnmp_register_int_instance (const char * name, oid * reg_oid, size_t reg_oid_len, int * it, Netsnmp_Node_Handler * subhandler)"
+.SS "int netsnmp_register_int_instance (const char *name, oid *reg_oid, size_treg_oid_len, int *it, Netsnmp_Node_Handler *subhandler)"
 .PP
-This function registers an int helper handler to a specified OID. 
-.PP
-\fBParameters:\fP
+This function registers an int helper handler to a specified OID. \fBParameters:\fP
 .RS 4
 \fIname\fP the name used for registration pruposes.
 .br
@@ -162,16 +155,10 @@ MIB_REGISTERED_OK is returned if the registration was a success. Failures are MI
 .PP
 
 .PP
-\fBExamples: \fP
-.in +1c
-\fBscalar_int.c\fP.
+Definition at line 432 of file instance.c.
+.SS "int netsnmp_register_read_only_instance (\fBnetsnmp_handler_registration\fP *reginfo)"
 .PP
-Definition at line 430 of file instance.c.
-.SS "int netsnmp_register_read_only_instance (\fBnetsnmp_handler_registration\fP * reginfo)"
-.PP
-This function injects a 'read only' handler into the handler chain prior to serializing/registering the handler. 
-.PP
-The only purpose of this 'read only' handler is to return an appropriate error for any requests passed to it in a SET mode. Inserting it into your handler chain will ensure you're never asked to perform a SET request so you can ignore those error conditions.
+This function injects a 'read only' handler into the handler chain prior to serializing/registering the handler. The only purpose of this 'read only' handler is to return an appropriate error for any requests passed to it in a SET mode. Inserting it into your handler chain will ensure you're never asked to perform a SET request so you can ignore those error conditions.
 .PP
 \fBParameters:\fP
 .RS 4
