--- a/net-snmp/man/netsnmp_library.3
+++ b/net-snmp/man/netsnmp_library.3
@@ -1,8 +1,8 @@
-.TH "The Net-SNMP library" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "The Net-SNMP library" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_library \- the Net-SNMP library
+The Net-SNMP library \- 
 .SS "Data Structures"
 
 .in +1c
@@ -19,10 +19,9 @@ netsnmp_library \- the Net-SNMP library
 .ti -1c
 .RI "\fBasn1 parsing and datatype manipulation routines.\fP"
 .br
-.RI "\fINote on. \fP"
 .PP
-.in +1c
 
+.RI "\fINote on. \fP"
 .ti -1c
 .RI "\fBA generic callback mechanism\fP"
 .br
@@ -32,27 +31,24 @@ netsnmp_library \- the Net-SNMP library
 .ti -1c
 .RI "\fBstorage space for defaults\fP"
 .br
-.RI "\fIThe purpose of the default storage is three-fold:. \fP"
 .PP
-.in +1c
 
+.RI "\fIThe purpose of the default storage is three-fold: \fP"
 .ti -1c
 .RI "\fBmib parsing and datatype manipulation routines.\fP"
 .br
 .ti -1c
 .RI "\fBStore and retrieve data referenced by an OID.\fP"
 .br
-.RI "\fIThis is essentially a way of storing data associated with a given OID. \fP"
 .PP
-.in +1c
 
+.RI "\fIThis is essentially a way of storing data associated with a given OID. \fP"
 .ti -1c
 .RI "\fBparsing various configuration files at run time\fP"
 .br
-.RI "\fIThe read_config related functions are a fairly extensible system of parsing various configuration files at the run time. \fP"
 .PP
-.in +1c
 
+.RI "\fIThe read_config related functions are a fairly extensible system of parsing various configuration files at the run time. \fP"
 .ti -1c
 .RI "\fBgeneric library based alarm timers for various parts of an application\fP"
 .br
@@ -234,23 +230,23 @@ netsnmp_library \- the Net-SNMP library
 .RI "\fBnetsnmp_session\fP * \fBsnmp_open\fP (\fBnetsnmp_session\fP *session)"
 .br
 .ti -1c
-.RI "\fBnetsnmp_session\fP * \fBsnmp_open_ex\fP (\fBnetsnmp_session\fP *session, int(*fpre_parse)(\fBnetsnmp_session\fP *, netsnmp_transport *, void *, int), int(*fparse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int), int(*fbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t *), int(*frbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char **, size_t *, size_t *), int(*fcheck)(u_char *, size_t))"
+.RI "\fBnetsnmp_session\fP * \fBsnmp_open_ex\fP (\fBnetsnmp_session\fP *session, int(*fpre_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_transport\fP *, void *, int), int(*fparse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int), int(*fbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t *), int(*frbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char **, size_t *, size_t *), int(*fcheck)(u_char *, size_t))"
 .br
 .ti -1c
-.RI "int \fBsnmpv3_engineID_probe\fP (struct session_list *slp, \fBnetsnmp_session\fP *in_session)"
+.RI "int \fBsnmpv3_engineID_probe\fP (struct \fBsession_list\fP *slp, \fBnetsnmp_session\fP *in_session)"
 .br
 .RI "\fIprobe for peer engineID \fP"
 .ti -1c
-.RI "\fBnetsnmp_session\fP * \fBsnmp_add\fP (\fBnetsnmp_session\fP *in_session, netsnmp_transport *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, netsnmp_transport *, void *, int), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int))"
+.RI "\fBnetsnmp_session\fP * \fBsnmp_add\fP (\fBnetsnmp_session\fP *in_session, \fBnetsnmp_transport\fP *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_transport\fP *, void *, int), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int))"
 .br
 .ti -1c
-.RI "\fBnetsnmp_session\fP * \fBsnmp_add_full\fP (\fBnetsnmp_session\fP *in_session, netsnmp_transport *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, netsnmp_transport *, void *, int), int(*fparse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int), int(*fbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t *), int(*frbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char **, size_t *, size_t *), int(*fcheck)(u_char *, size_t), \fBnetsnmp_pdu\fP *(*fcreate_pdu)(netsnmp_transport *, void *, size_t))"
+.RI "\fBnetsnmp_session\fP * \fBsnmp_add_full\fP (\fBnetsnmp_session\fP *in_session, \fBnetsnmp_transport\fP *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_transport\fP *, void *, int), int(*fparse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int), int(*fbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t *), int(*frbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char **, size_t *, size_t *), int(*fcheck)(u_char *, size_t), \fBnetsnmp_pdu\fP *(*fcreate_pdu)(\fBnetsnmp_transport\fP *, void *, size_t))"
 .br
 .ti -1c
-.RI "void * \fBsnmp_sess_add_ex\fP (\fBnetsnmp_session\fP *in_session, netsnmp_transport *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, netsnmp_transport *, void *, int), int(*fparse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int), int(*fbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t *), int(*frbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char **, size_t *, size_t *), int(*fcheck)(u_char *, size_t), \fBnetsnmp_pdu\fP *(*fcreate_pdu)(netsnmp_transport *, void *, size_t))"
+.RI "void * \fBsnmp_sess_add_ex\fP (\fBnetsnmp_session\fP *in_session, \fBnetsnmp_transport\fP *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_transport\fP *, void *, int), int(*fparse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int), int(*fbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char *, size_t *), int(*frbuild)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, u_char **, size_t *, size_t *), int(*fcheck)(u_char *, size_t), \fBnetsnmp_pdu\fP *(*fcreate_pdu)(\fBnetsnmp_transport\fP *, void *, size_t))"
 .br
 .ti -1c
-.RI "void * \fBsnmp_sess_add\fP (\fBnetsnmp_session\fP *in_session, netsnmp_transport *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, netsnmp_transport *, void *, int), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int))"
+.RI "void * \fBsnmp_sess_add\fP (\fBnetsnmp_session\fP *in_session, \fBnetsnmp_transport\fP *transport, int(*fpre_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_transport\fP *, void *, int), int(*fpost_parse)(\fBnetsnmp_session\fP *, \fBnetsnmp_pdu\fP *, int))"
 .br
 .ti -1c
 .RI "void * \fBsnmp_sess_open\fP (\fBnetsnmp_session\fP *pss)"
@@ -310,7 +306,7 @@ netsnmp_library \- the Net-SNMP library
 .RI "void \fBsnmp_free_pdu\fP (\fBnetsnmp_pdu\fP *pdu)"
 .br
 .ti -1c
-.RI "\fBnetsnmp_pdu\fP * \fBsnmp_create_sess_pdu\fP (netsnmp_transport *transport, void *opaque, size_t olength)"
+.RI "\fBnetsnmp_pdu\fP * \fBsnmp_create_sess_pdu\fP (\fBnetsnmp_transport\fP *transport, void *opaque, size_t olength)"
 .br
 .ti -1c
 .RI "void \fBsnmp_read\fP (fd_set *fdset)"
@@ -376,10 +372,10 @@ netsnmp_library \- the Net-SNMP library
 .RI "\fBnetsnmp_session\fP * \fBsnmp_sess_session\fP (void *sessp)"
 .br
 .ti -1c
-.RI "netsnmp_transport * \fBsnmp_sess_transport\fP (void *sessp)"
+.RI "\fBnetsnmp_transport\fP * \fBsnmp_sess_transport\fP (void *sessp)"
 .br
 .ti -1c
-.RI "void \fBsnmp_sess_transport_set\fP (void *sp, netsnmp_transport *t)"
+.RI "void \fBsnmp_sess_transport_set\fP (void *sp, \fBnetsnmp_transport\fP *t)"
 .br
 .ti -1c
 .RI "oid * \fBsnmp_duplicate_objid\fP (const oid *objToCopy, size_t objToCopyLen)"
@@ -401,13 +397,13 @@ netsnmp_library \- the Net-SNMP library
 
 .in +1c
 .ti -1c
-.RI "struct module_init_list * \fBinitlist\fP = NULL"
+.RI "struct \fBmodule_init_list\fP * \fBinitlist\fP = NULL"
 .br
 .ti -1c
-.RI "struct module_init_list * \fBnoinitlist\fP = NULL"
+.RI "struct \fBmodule_init_list\fP * \fBnoinitlist\fP = NULL"
 .br
 .ti -1c
-.RI "netsnmp_subtree * \fBsubtrees\fP"
+.RI "\fBnetsnmp_subtree\fP * \fBsubtrees\fP"
 .br
 .ti -1c
 .RI "long \fBlong_return\fP"
@@ -428,7 +424,7 @@ netsnmp_library \- the Net-SNMP library
 .RI "int \fBnullOidLen\fP = sizeof(nullOid)"
 .br
 .ti -1c
-.RI "struct session_list * \fBSessions\fP = NULL"
+.RI "struct \fBsession_list\fP * \fBSessions\fP = NULL"
 .br
 .ti -1c
 .RI "int \fBsnmp_errno\fP = 0"
@@ -436,9 +432,7 @@ netsnmp_library \- the Net-SNMP library
 .in -1c
 .SH "Define Documentation"
 .PP 
-.SS "#define timercmp(tvp, uvp, cmp)"
-.PP
-\fBValue:\fP
+.SS "#define timercmp(tvp, uvp, cmp)"\fBValue:\fP
 .PP
 .nf
 /* CSTYLED */ \
@@ -451,20 +445,16 @@ netsnmp_library \- the Net-SNMP library
 Definition at line 147 of file snmp_api.c.
 .SH "Function Documentation"
 .PP 
-.SS "int _sess_read (void * sessp, fd_set * fdset)"
-.PP
-
+.SS "int _sess_read (void *sessp, fd_set *fdset)"
 .PP
 XXX-rks: why no SNMP_FREE(isp->packet); ??
 .PP
 XXX-rks: why no SNMP_FREE(isp->packet); ?? 
 .PP
-Definition at line 5406 of file snmp_api.c.
-.SS "int init_agent (const char * app)"
+Definition at line 5432 of file snmp_api.c.
+.SS "int init_agent (const char *app)"
 .PP
-Initialize the agent. 
-.PP
-Calls into init_agent_read_config to set tha app's configuration file in the appropriate default storage space, NETSNMP_DS_LIB_APPTYPE. Need to call init_agent before calling init_snmp.
+Initialize the agent. Calls into init_agent_read_config to set tha app's configuration file in the appropriate default storage space, NETSNMP_DS_LIB_APPTYPE. Need to call init_agent before calling init_snmp.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -484,11 +474,9 @@ Returns non-zero on failure and zero on success.
 
 .PP
 Definition at line 270 of file snmp_vars.c.
-.SS "void init_snmp (const char * type)"
+.SS "void init_snmp (const char *type)"
 .PP
-Calls the functions to do config file loading and mib module parsing in the correct order. 
-.PP
-\fBParameters:\fP
+Calls the functions to do config file loading and mib module parsing in the correct order. \fBParameters:\fP
 .RS 4
 \fItype\fP label for the config file 'type'
 .RE
@@ -505,12 +493,10 @@ void
 .PP
 
 .PP
-Definition at line 793 of file snmp_api.c.
-.SS "int netsnmp_oid_compare_ll (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2, size_t * offpt)"
+Definition at line 813 of file snmp_api.c.
+.SS "int netsnmp_oid_compare_ll (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2, size_t *offpt)"
 .PP
-lexicographical compare two object identifiers and return the point where they differ 
-.PP
-Caution: this method is called often by command responder applications (ie, agent).
+lexicographical compare two object identifiers and return the point where they differ Caution: this method is called often by command responder applications (ie, agent).
 .PP
 \fBReturns:\fP
 .RS 4
@@ -519,12 +505,10 @@ Caution: this method is called often by command responder applications (ie, agen
 .PP
 
 .PP
-Definition at line 6347 of file snmp_api.c.
-.SS "int netsnmp_oid_equals (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6373 of file snmp_api.c.
+.SS "int netsnmp_oid_equals (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
-Compares 2 OIDs to determine if they are exactly equal. 
-.PP
-This should be faster than doing a snmp_oid_compare for different length OIDs, since the length is checked first and if != returns immediately. Might be very slighly faster if lengths are ==. 
+Compares 2 OIDs to determine if they are exactly equal. This should be faster than doing a snmp_oid_compare for different length OIDs, since the length is checked first and if != returns immediately. Might be very slighly faster if lengths are ==. 
 .PP
 \fBParameters:\fP
 .RS 4
@@ -544,12 +528,10 @@ This should be faster than doing a snmp_oid_compare for different length OIDs, s
 .PP
 
 .PP
-Definition at line 6419 of file snmp_api.c.
-.SS "int netsnmp_oid_find_prefix (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6445 of file snmp_api.c.
+.SS "int netsnmp_oid_find_prefix (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
-Given two OIDs, determine the common prefix to them both. 
-.PP
-\fBParameters:\fP
+Given two OIDs, determine the common prefix to them both. \fBParameters:\fP
 .RS 4
 \fIin_name1\fP A pointer to the first oid. 
 .br
@@ -567,12 +549,10 @@ length of largest common index of commonality. 1 = first, 0 if none * or -1 on e
 .PP
 
 .PP
-Definition at line 6475 of file snmp_api.c.
-.SS "int netsnmp_oid_is_subtree (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6508 of file snmp_api.c.
+.SS "int netsnmp_oid_is_subtree (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
-Identical to netsnmp_oid_equals, except only the length up to len1 is compared. 
-.PP
-Functionally, this determines if in_name2 is equal or a subtree of in_name1 
+Identical to netsnmp_oid_equals, except only the length up to len1 is compared. Functionally, this determines if in_name2 is equal or a subtree of in_name1 
 .PP
 \fBParameters:\fP
 .RS 4
@@ -592,12 +572,10 @@ Functionally, this determines if in_name2 is equal or a subtree of in_name1
 .PP
 
 .PP
-Definition at line 6455 of file snmp_api.c.
-.SS "int snmp_oid_compare (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6488 of file snmp_api.c.
+.SS "int snmp_oid_compare (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
-lexicographical compare two object identifiers. 
-.PP
-Caution: this method is called often by command responder applications (ie, agent).
+lexicographical compare two object identifiers. Caution: this method is called often by command responder applications (ie, agent).
 .PP
 \fBReturns:\fP
 .RS 4
@@ -606,12 +584,10 @@ Caution: this method is called often by command responder applications (ie, agen
 .PP
 
 .PP
-Definition at line 6298 of file snmp_api.c.
-.SS "int snmp_oidtree_compare (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6324 of file snmp_api.c.
+.SS "int snmp_oidtree_compare (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
-Compares 2 OIDs to determine if they are equal up until the shortest length. 
-.PP
-\fBParameters:\fP
+Compares 2 OIDs to determine if they are equal up until the shortest length. \fBParameters:\fP
 .RS 4
 \fIin_name1\fP A pointer to the first oid. 
 .br
@@ -629,12 +605,10 @@ Compares 2 OIDs to determine if they are equal up until the shortest length.
 .PP
 
 .PP
-Definition at line 6400 of file snmp_api.c.
-.SS "void snmp_shutdown (const char * type)"
+Definition at line 6426 of file snmp_api.c.
+.SS "void snmp_shutdown (const char *type)"
 .PP
-Shuts down the application, saving any needed persistent storage, and appropriate clean up. 
-.PP
-\fBParameters:\fP
+Shuts down the application, saving any needed persistent storage, and appropriate clean up. \fBParameters:\fP
 .RS 4
 \fItype\fP Label for the config file 'type' used
 .RE
@@ -646,12 +620,10 @@ void
 .PP
 
 .PP
-Definition at line 862 of file snmp_api.c.
-.SS "int snmpv3_engineID_probe (struct session_list * slp, \fBnetsnmp_session\fP * in_session)"
+Definition at line 882 of file snmp_api.c.
+.SS "int snmpv3_engineID_probe (struct \fBsession_list\fP *slp, \fBnetsnmp_session\fP *in_session)"
 .PP
-probe for peer engineID 
-.PP
-\fBParameters:\fP
+probe for peer engineID \fBParameters:\fP
 .RS 4
 \fIslp\fP session list pointer. 
 .br
@@ -678,7 +650,7 @@ the first session in slp should the internal allocated copy of in_session
 .PP
 
 .PP
-Definition at line 1277 of file snmp_api.c.
+Definition at line 1298 of file snmp_api.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
