--- a/net-snmp/man/netsnmp_multiplexer.3
+++ b/net-snmp/man/netsnmp_multiplexer.3
@@ -1,10 +1,11 @@
-.TH "multiplexer" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "multiplexer" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-multiplexer \- Splits mode requests into calls to different handlers.  
-
+multiplexer \- 
 .PP
+Splits mode requests into calls to different handlers.  
+
 .SS "Functions"
 
 .in +1c
@@ -37,12 +38,12 @@ SET requests call the set_method, or if not present return a SNMP_ERR_NOTWRITABL
 
 .SH "Function Documentation"
 .PP 
-.SS "\fBnetsnmp_mib_handler\fP* netsnmp_get_multiplexer_handler (\fBnetsnmp_mib_handler_methods\fP * req)"
+.SS "\fBnetsnmp_mib_handler\fP* netsnmp_get_multiplexer_handler (\fBnetsnmp_mib_handler_methods\fP *req)"
 .PP
 returns a multiplixer handler given a \fBnetsnmp_mib_handler_methods\fP structure of subhandlers. 
 .PP
 Definition at line 33 of file multiplexer.c.
-.SS "int netsnmp_multiplexer_helper_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"
+.SS "int netsnmp_multiplexer_helper_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"
 .PP
 implements the multiplexer helper 
 .PP
