--- a/net-snmp/man/netsnmp_netsnmp_handler_registration_s.3
+++ b/net-snmp/man/netsnmp_netsnmp_handler_registration_s.3
@@ -1,15 +1,16 @@
-.TH "netsnmp_handler_registration_s" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_handler_registration_s" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_handler_registration_s \- Root registration info.  
-
+netsnmp_handler_registration_s \- 
 .PP
+Root registration info.  
+
 .SH SYNOPSIS
 .br
 .PP
-\fC#include <agent_handler.h>\fP
 .PP
+\fC#include <agent_handler.h>\fP
 .SS "Data Fields"
 
 .in +1c
