--- a/net-snmp/man/netsnmp_netsnmp_mib_handler_access_methods.3
+++ b/net-snmp/man/netsnmp_netsnmp_mib_handler_access_methods.3
@@ -1,15 +1,16 @@
-.TH "netsnmp_mib_handler_access_methods" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_mib_handler_access_methods" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_mib_handler_access_methods \- Defines the access methods to be called by the access_multiplexer helper.  
-
+netsnmp_mib_handler_access_methods \- 
 .PP
+Defines the access methods to be called by the access_multiplexer helper.  
+
 .SH SYNOPSIS
 .br
 .PP
-\fC#include <baby_steps.h>\fP
 .PP
+\fC#include <baby_steps.h>\fP
 .SH "Detailed Description"
 .PP 
 Defines the access methods to be called by the access_multiplexer helper. 
