--- a/net-snmp/man/netsnmp_netsnmp_mib_handler_methods.3
+++ b/net-snmp/man/netsnmp_netsnmp_mib_handler_methods.3
@@ -1,15 +1,16 @@
-.TH "netsnmp_mib_handler_methods" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_mib_handler_methods" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_mib_handler_methods \- Defines the subhandlers to be called by the multiplexer helper.  
-
+netsnmp_mib_handler_methods \- 
 .PP
+Defines the subhandlers to be called by the multiplexer helper.  
+
 .SH SYNOPSIS
 .br
 .PP
-\fC#include <multiplexer.h>\fP
 .PP
+\fC#include <multiplexer.h>\fP
 .SH "Detailed Description"
 .PP 
 Defines the subhandlers to be called by the multiplexer helper. 
