--- a/net-snmp/man/netsnmp_netsnmp_table_registration_info_s.3
+++ b/net-snmp/man/netsnmp_netsnmp_table_registration_info_s.3
@@ -1,15 +1,16 @@
-.TH "netsnmp_table_registration_info_s" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_table_registration_info_s" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_table_registration_info_s \- Table registration structure.  
-
+netsnmp_table_registration_info_s \- 
 .PP
+Table registration structure.  
+
 .SH SYNOPSIS
 .br
 .PP
-\fC#include <table.h>\fP
 .PP
+\fC#include <table.h>\fP
 .SS "Data Fields"
 
 .in +1c
@@ -53,9 +54,7 @@ the maximum columns number
 Definition at line 87 of file table.h.
 .SS "unsigned int \fBnetsnmp_table_registration_info_s::min_column\fP"
 .PP
-the minimum columns number. 
-.PP
-If there are columns in-between which are not valid, use valid_columns to get automatic column range checking. 
+the minimum columns number. If there are columns in-between which are not valid, use valid_columns to get automatic column range checking. 
 .PP
 Definition at line 85 of file table.h.
 .SS "unsigned int \fBnetsnmp_table_registration_info_s::number_indexes\fP"
