--- a/net-snmp/man/netsnmp_netsnmp_table_request_info_s.3
+++ b/net-snmp/man/netsnmp_netsnmp_table_request_info_s.3
@@ -1,15 +1,16 @@
-.TH "netsnmp_table_request_info_s" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_table_request_info_s" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_table_request_info_s \- The table request info structure.  
-
+netsnmp_table_request_info_s \- 
 .PP
+The table request info structure.  
+
 .SH SYNOPSIS
 .br
 .PP
-\fC#include <table.h>\fP
 .PP
+\fC#include <table.h>\fP
 .SS "Data Fields"
 
 .in +1c
