--- a/net-snmp/man/netsnmp_read_only.3
+++ b/net-snmp/man/netsnmp_read_only.3
@@ -1,10 +1,11 @@
-.TH "read_only" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "read_only" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-read_only \- Make your handler read_only automatically The only purpose of this handler is to return an appropriate error for any requests passed to it in a SET mode.  
-
+read_only \- 
 .PP
+Make your handler read_only automatically The only purpose of this handler is to return an appropriate error for any requests passed to it in a SET mode.  
+
 .SS "Functions"
 
 .in +1c
