--- a/net-snmp/man/netsnmp_scalar.3
+++ b/net-snmp/man/netsnmp_scalar.3
@@ -1,10 +1,11 @@
-.TH "scalar" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "scalar" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-scalar \- Process scalars easily.  
-
+scalar \- 
 .PP
+Process scalars easily.  
+
 .SS "Functions"
 
 .in +1c
@@ -31,9 +32,7 @@ Process scalars easily.
 .PP 
 .SS "\fBnetsnmp_mib_handler\fP* netsnmp_get_scalar_handler (void)"
 .PP
-Creates a scalar handler calling netsnmp_create_handler with a handler name defaulted to 'scalar' and access method, netsnmp_scalar_helper_handler. 
-.PP
-\fBReturns:\fP
+Creates a scalar handler calling netsnmp_create_handler with a handler name defaulted to 'scalar' and access method, netsnmp_scalar_helper_handler. \fBReturns:\fP
 .RS 4
 Returns a pointer to a netsnmp_mib_handler struct which contains the handler's name and the access method
 .RE
@@ -48,11 +47,9 @@ Returns a pointer to a netsnmp_mib_handler struct which contains the handler's n
 
 .PP
 Definition at line 46 of file scalar.c.
-.SS "int netsnmp_register_read_only_scalar (\fBnetsnmp_handler_registration\fP * reginfo)"
+.SS "int netsnmp_register_read_only_scalar (\fBnetsnmp_handler_registration\fP *reginfo)"
 .PP
-This function registers a read only scalar helper handler. 
-.PP
-This function is very similar to netsnmp_register_scalar the only addition is that the 'read_only' handler is injected into the handler chain prior to injecting the serialize handler and registering reginfo.
+This function registers a read only scalar helper handler. This function is very similar to netsnmp_register_scalar the only addition is that the 'read_only' handler is injected into the handler chain prior to injecting the serialize handler and registering reginfo.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -74,11 +71,9 @@ MIB_REGISTERED_OK is returned if the registration was a success. Failures are MI
 
 .PP
 Definition at line 109 of file scalar.c.
-.SS "int netsnmp_register_scalar (\fBnetsnmp_handler_registration\fP * reginfo)"
+.SS "int netsnmp_register_scalar (\fBnetsnmp_handler_registration\fP *reginfo)"
 .PP
-This function registers a scalar helper handler. 
-.PP
-The registered OID, reginfo->rootoid, space is extended for the instance subid using realloc() but the reginfo->rootoid_len length is not extended just yet. .This function subsequently injects the instance, scalar, and serialize helper handlers before actually registering reginfo.
+This function registers a scalar helper handler. The registered OID, reginfo->rootoid, space is extended for the instance subid using realloc() but the reginfo->rootoid_len length is not extended just yet. .This function subsequently injects the instance, scalar, and serialize helper handlers before actually registering reginfo.
 .PP
 Each handler is injected/pushed to the top of the handler chain list and will be processed last in first out, LIFO.
 .PP
