--- a/net-snmp/man/netsnmp_scalar_group_group.3
+++ b/net-snmp/man/netsnmp_scalar_group_group.3
@@ -1,10 +1,11 @@
-.TH "scalar_group" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "scalar_group" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-scalar_group \- Process groups of scalars.  
-
+scalar_group \- 
 .PP
+Process groups of scalars.  
+
 .SS "Functions"
 
 .in +1c
