--- a/net-snmp/man/netsnmp_snmp_pdu.3
+++ b/net-snmp/man/netsnmp_snmp_pdu.3
@@ -1,15 +1,16 @@
-.TH "snmp_pdu" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "snmp_pdu" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-snmp_pdu \- The snmp protocol data unit.  
-
+snmp_pdu \- 
 .PP
+The snmp protocol data unit.  
+
 .SH SYNOPSIS
 .br
 .PP
-\fC#include <snmp_api.h>\fP
 .PP
+\fC#include <snmp_api.h>\fP
 .SS "Data Fields"
 
 .in +1c
@@ -40,11 +41,11 @@ snmp_pdu \- The snmp protocol data unit.
 .ti -1c
 .RI "long \fBerrstat\fP"
 .br
-.RI "\fIError status (non_repeaters in GetBulk). \fP"
+.RI "\fIError status (non_repeaters in GetBulk) \fP"
 .ti -1c
 .RI "long \fBerrindex\fP"
 .br
-.RI "\fIError index (max_repetitions in GetBulk). \fP"
+.RI "\fIError index (max_repetitions in GetBulk) \fP"
 .ti -1c
 .RI "u_long \fBtime\fP"
 .br
@@ -169,14 +170,10 @@ Definition at line 83 of file snmp_api.h.
 .PP
 community for outgoing requests. 
 .PP
-
-.PP
 Definition at line 127 of file snmp_api.h.
 .SS "size_t \fBsnmp_pdu::community_len\fP"
 .PP
 length of community name. 
-.PP
-
 .PP
 Definition at line 129 of file snmp_api.h.
 .SS "u_char* \fBsnmp_pdu::contextEngineID\fP"
@@ -206,12 +203,12 @@ System OID.
 Definition at line 135 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::errindex\fP"
 .PP
-Error index (max_repetitions in GetBulk). 
+Error index (max_repetitions in GetBulk) 
 .PP
 Definition at line 95 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::errstat\fP"
 .PP
-Error status (non_repeaters in GetBulk). 
+Error status (non_repeaters in GetBulk) 
 .PP
 Definition at line 93 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::msgid\fP"
@@ -248,8 +245,6 @@ Definition at line 160 of file snmp_api.h.
 .PP
 Length of securityName. 
 .PP
-
-.PP
 Definition at line 162 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::sessid\fP"
 .PP
@@ -263,9 +258,7 @@ specific type
 Definition at line 140 of file snmp_api.h.
 .SS "const oid* \fBsnmp_pdu::tDomain\fP"
 .PP
-The actual transport domain. 
-.PP
-This SHOULD NOT BE FREE()D. 
+The actual transport domain. This SHOULD NOT BE FREE()D. 
 .PP
 Definition at line 117 of file snmp_api.h.
 .SS "u_long \fBsnmp_pdu::time\fP"
@@ -280,9 +273,7 @@ Unique ID for incoming transactions.
 Definition at line 89 of file snmp_api.h.
 .SS "void* \fBsnmp_pdu::transport_data\fP"
 .PP
-Transport-specific opaque data. 
-.PP
-This replaces the IP-centric address field. 
+Transport-specific opaque data. This replaces the IP-centric address field. 
 .PP
 Definition at line 110 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::trap_type\fP"
