--- a/net-snmp/man/netsnmp_table_array.3
+++ b/net-snmp/man/netsnmp_table_array.3
@@ -1,30 +1,31 @@
-.TH "table_array" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "table_array" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-table_array \- Helps you implement a table when data can be stored locally.  
-
+table_array \- 
 .PP
+Helps you implement a table when data can be stored locally.  
+
 .SS "Functions"
 
 .in +1c
 .ti -1c
-.RI "int \fBnetsnmp_table_container_register\fP (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_registration_info\fP *tabreg, netsnmp_table_array_callbacks *cb, netsnmp_container *container, int group_rows)"
+.RI "int \fBnetsnmp_table_container_register\fP (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_registration_info\fP *tabreg, \fBnetsnmp_table_array_callbacks\fP *cb, \fBnetsnmp_container\fP *container, int group_rows)"
 .br
 .RI "\fIregister specified callbacks for the specified table/oid. \fP"
 .ti -1c
-.RI "int \fBnetsnmp_table_array_register\fP (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_registration_info\fP *tabreg, netsnmp_table_array_callbacks *cb, netsnmp_container *container, int group_rows)"
+.RI "int \fBnetsnmp_table_array_register\fP (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_registration_info\fP *tabreg, \fBnetsnmp_table_array_callbacks\fP *cb, \fBnetsnmp_container\fP *container, int group_rows)"
 .br
 .ti -1c
 .RI "\fBnetsnmp_mib_handler\fP * \fBnetsnmp_find_table_array_handler\fP (\fBnetsnmp_handler_registration\fP *reginfo)"
 .br
 .RI "\fIfind the handler for the table_array helper. \fP"
 .ti -1c
-.RI "netsnmp_container * \fBnetsnmp_extract_array_context\fP (\fBnetsnmp_request_info\fP *request)"
+.RI "\fBnetsnmp_container\fP * \fBnetsnmp_extract_array_context\fP (\fBnetsnmp_request_info\fP *request)"
 .br
 .RI "\fIfind the context data used by the table_array helper \fP"
 .ti -1c
-.RI "int \fBnetsnmp_table_array_check_row_status\fP (netsnmp_table_array_callbacks *cb, netsnmp_request_group *ag, long *rs_new, long *rs_old)"
+.RI "int \fBnetsnmp_table_array_check_row_status\fP (\fBnetsnmp_table_array_callbacks\fP *cb, \fBnetsnmp_request_group\fP *ag, long *rs_new, long *rs_old)"
 .br
 .RI "\fIthis function is called to validate RowStatus transitions. \fP"
 .in -1c
@@ -59,30 +60,24 @@ Code will be generated to maintain a secondary index for all rows, stored in a b
 The generated code contains many TODO comments. Make sure you check each one to see if it applies to your code. Examples include checking indices for syntax (ranges, etc), initializing default values in newly created rows, checking for row activation and deactivation requirements, etc. 
 .SH "Function Documentation"
 .PP 
-.SS "netsnmp_container* netsnmp_extract_array_context (\fBnetsnmp_request_info\fP * request)"
+.SS "\fBnetsnmp_container\fP* netsnmp_extract_array_context (\fBnetsnmp_request_info\fP *request)"
 .PP
 find the context data used by the table_array helper 
 .PP
 Definition at line 229 of file table_array.c.
-.SS "\fBnetsnmp_mib_handler\fP* netsnmp_find_table_array_handler (\fBnetsnmp_handler_registration\fP * reginfo)"
+.SS "\fBnetsnmp_mib_handler\fP* netsnmp_find_table_array_handler (\fBnetsnmp_handler_registration\fP *reginfo)"
 .PP
 find the handler for the table_array helper. 
 .PP
-
-.PP
 Definition at line 212 of file table_array.c.
-.SS "int netsnmp_table_array_check_row_status (netsnmp_table_array_callbacks * cb, netsnmp_request_group * ag, long * rs_new, long * rs_old)"
+.SS "int netsnmp_table_array_check_row_status (\fBnetsnmp_table_array_callbacks\fP *cb, \fBnetsnmp_request_group\fP *ag, long *rs_new, long *rs_old)"
 .PP
 this function is called to validate RowStatus transitions. 
 .PP
-
-.PP
 Definition at line 236 of file table_array.c.
-.SS "int netsnmp_table_container_register (\fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_table_registration_info\fP * tabreg, netsnmp_table_array_callbacks * cb, netsnmp_container * container, int group_rows)"
+.SS "int netsnmp_table_container_register (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_registration_info\fP *tabreg, \fBnetsnmp_table_array_callbacks\fP *cb, \fBnetsnmp_container\fP *container, intgroup_rows)"
 .PP
-register specified callbacks for the specified table/oid. 
-.PP
-If the group_rows parameter is set, the row related callbacks will be called once for each unique row index. Otherwise, each callback will be called only once, for all objects. 
+register specified callbacks for the specified table/oid. If the group_rows parameter is set, the row related callbacks will be called once for each unique row index. Otherwise, each callback will be called only once, for all objects. 
 .PP
 Definition at line 149 of file table_array.c.
 .SH "Author"
