--- a/net-snmp/man/netsnmp_table_container.3
+++ b/net-snmp/man/netsnmp_table_container.3
@@ -1,37 +1,38 @@
-.TH "table_container" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "table_container" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-table_container \- Helps you implement a table when data can be found via a netsnmp_container.  
-
+table_container \- 
 .PP
+Helps you implement a table when data can be found via a netsnmp_container.  
+
 .SS "Functions"
 
 .in +1c
 .ti -1c
-.RI "container_table_data * \fBnetsnmp_tcontainer_create_table\fP (const char *name, netsnmp_container *container, long flags)"
+.RI "\fBcontainer_table_data\fP * \fBnetsnmp_tcontainer_create_table\fP (const char *name, \fBnetsnmp_container\fP *container, long flags)"
 .br
 .ti -1c
-.RI "void \fBnetsnmp_tcontainer_delete_table\fP (container_table_data *table)"
+.RI "void \fBnetsnmp_tcontainer_delete_table\fP (\fBcontainer_table_data\fP *table)"
 .br
 .ti -1c
-.RI "int \fBnetsnmp_tcontainer_add_row\fP (container_table_data *table, netsnmp_index *row)"
+.RI "int \fBnetsnmp_tcontainer_add_row\fP (\fBcontainer_table_data\fP *table, \fBnetsnmp_index\fP *row)"
 .br
 .ti -1c
-.RI "netsnmp_index * \fBnetsnmp_tcontainer_remove_row\fP (container_table_data *table, netsnmp_index *row)"
+.RI "\fBnetsnmp_index\fP * \fBnetsnmp_tcontainer_remove_row\fP (\fBcontainer_table_data\fP *table, \fBnetsnmp_index\fP *row)"
 .br
 .ti -1c
-.RI "int \fBnetsnmp_tcontainer_replace_row\fP (container_table_data *table, netsnmp_index *old_row, netsnmp_index *new_row)"
+.RI "int \fBnetsnmp_tcontainer_replace_row\fP (\fBcontainer_table_data\fP *table, \fBnetsnmp_index\fP *old_row, \fBnetsnmp_index\fP *new_row)"
 .br
 .ti -1c
-.RI "\fBnetsnmp_mib_handler\fP * \fBnetsnmp_container_table_handler_get\fP (\fBnetsnmp_table_registration_info\fP *tabreg, netsnmp_container *container, char key_type)"
+.RI "\fBnetsnmp_mib_handler\fP * \fBnetsnmp_container_table_handler_get\fP (\fBnetsnmp_table_registration_info\fP *tabreg, \fBnetsnmp_container\fP *container, char key_type)"
 .br
 .RI "\fIreturns a netsnmp_mib_handler object for the table_container helper \fP"
 .ti -1c
-.RI "int \fBnetsnmp_container_table_register\fP (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_registration_info\fP *tabreg, netsnmp_container *container, char key_type)"
+.RI "int \fBnetsnmp_container_table_register\fP (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_registration_info\fP *tabreg, \fBnetsnmp_container\fP *container, char key_type)"
 .br
 .ti -1c
-.RI "netsnmp_container * \fBnetsnmp_container_table_container_extract\fP (\fBnetsnmp_request_info\fP *request)"
+.RI "\fBnetsnmp_container\fP * \fBnetsnmp_container_table_container_extract\fP (\fBnetsnmp_request_info\fP *request)"
 .br
 .RI "\fIretrieve the container used by the table_container helper \fP"
 .ti -1c
@@ -43,11 +44,11 @@ table_container \- Helps you implement a table when data can be found via a nets
 .br
 .RI "\fIfind the context data used by the table_container helper \fP"
 .ti -1c
-.RI "void \fBnetsnmp_container_table_row_insert\fP (\fBnetsnmp_request_info\fP *request, netsnmp_index *row)"
+.RI "void \fBnetsnmp_container_table_row_insert\fP (\fBnetsnmp_request_info\fP *request, \fBnetsnmp_index\fP *row)"
 .br
 .RI "\fIinserts a newly created table_container entry into a request list \fP"
 .ti -1c
-.RI "netsnmp_index * \fBnetsnmp_table_index_find_next_row\fP (netsnmp_container *c, \fBnetsnmp_table_request_info\fP *tblreq)"
+.RI "\fBnetsnmp_index\fP * \fBnetsnmp_table_index_find_next_row\fP (\fBnetsnmp_container\fP *c, \fBnetsnmp_table_request_info\fP *tblreq)"
 .br
 .RI "\fIdeprecated, backwards compatability only \fP"
 .in -1c
@@ -90,36 +91,34 @@ If a row is found, it will be inserted into the request's data list. The sub-han
 This helper and it's API are still being tested and are subject to change. 
 .SH "Function Documentation"
 .PP 
-.SS "netsnmp_container* netsnmp_container_table_container_extract (\fBnetsnmp_request_info\fP * request)"
+.SS "\fBnetsnmp_container\fP* netsnmp_container_table_container_extract (\fBnetsnmp_request_info\fP *request)"
 .PP
 retrieve the container used by the table_container helper 
 .PP
 Definition at line 320 of file table_container.c.
-.SS "void* netsnmp_container_table_extract_context (\fBnetsnmp_request_info\fP * request)"
+.SS "void* netsnmp_container_table_extract_context (\fBnetsnmp_request_info\fP *request)"
 .PP
 find the context data used by the table_container helper 
 .PP
 Definition at line 339 of file table_container.c.
-.SS "\fBnetsnmp_mib_handler\fP* netsnmp_container_table_handler_get (\fBnetsnmp_table_registration_info\fP * tabreg, netsnmp_container * container, char key_type)"
+.SS "\fBnetsnmp_mib_handler\fP* netsnmp_container_table_handler_get (\fBnetsnmp_table_registration_info\fP *tabreg, \fBnetsnmp_container\fP *container, charkey_type)"
 .PP
 returns a netsnmp_mib_handler object for the table_container helper 
 .PP
 Definition at line 254 of file table_container.c.
-.SS "void* netsnmp_container_table_row_extract (\fBnetsnmp_request_info\fP * request)"
+.SS "void* netsnmp_container_table_row_extract (\fBnetsnmp_request_info\fP *request)"
 .PP
 find the context data used by the table_container helper 
 .PP
 Definition at line 329 of file table_container.c.
-.SS "void netsnmp_container_table_row_insert (\fBnetsnmp_request_info\fP * request, netsnmp_index * row)"
+.SS "void netsnmp_container_table_row_insert (\fBnetsnmp_request_info\fP *request, \fBnetsnmp_index\fP *row)"
 .PP
 inserts a newly created table_container entry into a request list 
 .PP
 Definition at line 351 of file table_container.c.
-.SS "netsnmp_index* netsnmp_table_index_find_next_row (netsnmp_container * c, \fBnetsnmp_table_request_info\fP * tblreq)"
+.SS "\fBnetsnmp_index\fP* netsnmp_table_index_find_next_row (\fBnetsnmp_container\fP *c, \fBnetsnmp_table_request_info\fP *tblreq)"
 .PP
-deprecated, backwards compatability only 
-.PP
-expected impact to remove: none
+deprecated, backwards compatability only expected impact to remove: none
 .IP "\(bu" 2
 used between helpers, shouldn't have been used by end users
 .PP
