--- a/net-snmp/man/netsnmp_table_dataset.3
+++ b/net-snmp/man/netsnmp_table_dataset.3
@@ -1,10 +1,11 @@
-.TH "table_dataset" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "table_dataset" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-table_dataset \- Helps you implement a table with automatted storage.  
-
+table_dataset \- 
 .PP
+Helps you implement a table with automatted storage.  
+
 .SS "Functions"
 
 .in +1c
@@ -12,77 +13,77 @@ table_dataset \- Helps you implement a table with automatted storage.
 .RI "void \fBnetsnmp_init_table_dataset\fP (void)"
 .br
 .ti -1c
-.RI "netsnmp_table_data_set * \fBnetsnmp_create_table_data_set\fP (const char *table_name)"
+.RI "\fBnetsnmp_table_data_set\fP * \fBnetsnmp_create_table_data_set\fP (const char *table_name)"
 .br
 .RI "\fICreate a netsnmp_table_data_set structure given a table_data definition. \fP"
 .ti -1c
-.RI "netsnmp_table_row * \fBnetsnmp_table_data_set_clone_row\fP (netsnmp_table_row *row)"
+.RI "\fBnetsnmp_table_row\fP * \fBnetsnmp_table_data_set_clone_row\fP (\fBnetsnmp_table_row\fP *row)"
 .br
 .RI "\fIclones a dataset row, including all data. \fP"
 .ti -1c
-.RI "NETSNMP_INLINE netsnmp_table_data_set_storage * \fBnetsnmp_table_dataset_delete_data\fP (netsnmp_table_data_set_storage *data)"
+.RI "NETSNMP_INLINE \fBnetsnmp_table_data_set_storage\fP * \fBnetsnmp_table_dataset_delete_data\fP (\fBnetsnmp_table_data_set_storage\fP *data)"
 .br
 .RI "\fIdeletes a single dataset table data. \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_delete_all_data\fP (netsnmp_table_data_set_storage *data)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_delete_all_data\fP (\fBnetsnmp_table_data_set_storage\fP *data)"
 .br
 .RI "\fIdeletes all the data from this node and beyond in the linked list \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_delete_row\fP (netsnmp_table_row *row)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_delete_row\fP (\fBnetsnmp_table_row\fP *row)"
 .br
 .RI "\fIdeletes all the data from this node and beyond in the linked list \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_add_row\fP (netsnmp_table_data_set *table, netsnmp_table_row *row)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_add_row\fP (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .br
 .RI "\fIadds a new row to a dataset table \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_replace_row\fP (netsnmp_table_data_set *table, netsnmp_table_row *origrow, netsnmp_table_row *newrow)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_replace_row\fP (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *origrow, \fBnetsnmp_table_row\fP *newrow)"
 .br
 .RI "\fIadds a new row to a dataset table \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_remove_row\fP (netsnmp_table_data_set *table, netsnmp_table_row *row)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_remove_row\fP (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .br
 .RI "\fIremoves a row from the table, but doesn't delete/free the column values \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_remove_and_delete_row\fP (netsnmp_table_data_set *table, netsnmp_table_row *row)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_remove_and_delete_row\fP (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .br
 .RI "\fIremoves a row from the table and then deletes it (and all its data) \fP"
 .ti -1c
-.RI "netsnmp_table_row * \fBnetsnmp_table_data_set_create_row_from_defaults\fP (netsnmp_table_data_set_storage *defrow)"
+.RI "\fBnetsnmp_table_row\fP * \fBnetsnmp_table_data_set_create_row_from_defaults\fP (\fBnetsnmp_table_data_set_storage\fP *defrow)"
 .br
 .RI "\fIcreates a new row from an existing defined default set \fP"
 .ti -1c
-.RI "int \fBnetsnmp_table_set_add_default_row\fP (netsnmp_table_data_set *table_set, unsigned int column, int type, int writable, void *default_value, size_t default_value_len)"
+.RI "int \fBnetsnmp_table_set_add_default_row\fP (\fBnetsnmp_table_data_set\fP *table_set, unsigned int column, int type, int writable, void *default_value, size_t default_value_len)"
 .br
 .RI "\fIadds a new default row to a table_set. \fP"
 .ti -1c
-.RI "void \fBnetsnmp_table_set_multi_add_default_row\fP (netsnmp_table_data_set *tset,...)"
+.RI "void \fBnetsnmp_table_set_multi_add_default_row\fP (\fBnetsnmp_table_data_set\fP *tset,...)"
 .br
 .RI "\fIadds multiple data column definitions to each row. \fP"
 .ti -1c
-.RI "\fBnetsnmp_mib_handler\fP * \fBnetsnmp_get_table_data_set_handler\fP (netsnmp_table_data_set *data_set)"
+.RI "\fBnetsnmp_mib_handler\fP * \fBnetsnmp_get_table_data_set_handler\fP (\fBnetsnmp_table_data_set\fP *data_set)"
 .br
 .RI "\fIGiven a netsnmp_table_data_set definition, create a handler for it. \fP"
 .ti -1c
-.RI "int \fBnetsnmp_register_table_data_set\fP (\fBnetsnmp_handler_registration\fP *reginfo, netsnmp_table_data_set *data_set, \fBnetsnmp_table_registration_info\fP *table_info)"
+.RI "int \fBnetsnmp_register_table_data_set\fP (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_data_set\fP *data_set, \fBnetsnmp_table_registration_info\fP *table_info)"
 .br
 .RI "\fIregister a given data_set at a given oid (specified in the netsnmp_handler_registration pointer). \fP"
 .ti -1c
-.RI "newrow_stash * \fBnetsnmp_table_data_set_create_newrowstash\fP (netsnmp_table_data_set *datatable, \fBnetsnmp_table_request_info\fP *table_info)"
+.RI "\fBnewrow_stash\fP * \fBnetsnmp_table_data_set_create_newrowstash\fP (\fBnetsnmp_table_data_set\fP *datatable, \fBnetsnmp_table_request_info\fP *table_info)"
 .br
 .ti -1c
 .RI "int \fBnetsnmp_table_data_set_helper_handler\fP (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"
 .br
 .ti -1c
-.RI "NETSNMP_INLINE netsnmp_table_data_set * \fBnetsnmp_extract_table_data_set\fP (\fBnetsnmp_request_info\fP *request)"
+.RI "NETSNMP_INLINE \fBnetsnmp_table_data_set\fP * \fBnetsnmp_extract_table_data_set\fP (\fBnetsnmp_request_info\fP *request)"
 .br
 .RI "\fIextracts a netsnmp_table_data_set pointer from a given request \fP"
 .ti -1c
-.RI "netsnmp_table_data_set_storage * \fBnetsnmp_extract_table_data_set_column\fP (\fBnetsnmp_request_info\fP *request, unsigned int column)"
+.RI "\fBnetsnmp_table_data_set_storage\fP * \fBnetsnmp_extract_table_data_set_column\fP (\fBnetsnmp_request_info\fP *request, unsigned int column)"
 .br
 .RI "\fIextracts a netsnmp_table_data_set pointer from a given request \fP"
 .ti -1c
-.RI "void \fBnetsnmp_register_auto_data_table\fP (netsnmp_table_data_set *table_set, char *registration_name)"
+.RI "void \fBnetsnmp_register_auto_data_table\fP (\fBnetsnmp_table_data_set\fP *table_set, char *registration_name)"
 .br
 .RI "\fIregisters a table_dataset so that the 'add_row' snmpd.conf token can be used to add data to this table. \fP"
 .ti -1c
@@ -92,34 +93,34 @@ table_dataset \- Helps you implement a table with automatted storage.
 .RI "void \fBnetsnmp_config_parse_add_row\fP (const char *token, char *line)"
 .br
 .ti -1c
-.RI "netsnmp_table_row * \fBnetsnmp_table_data_set_get_first_row\fP (netsnmp_table_data_set *table)"
+.RI "\fBnetsnmp_table_row\fP * \fBnetsnmp_table_data_set_get_first_row\fP (\fBnetsnmp_table_data_set\fP *table)"
 .br
 .RI "\fIreturns the first row in the table \fP"
 .ti -1c
-.RI "netsnmp_table_row * \fBnetsnmp_table_data_set_get_next_row\fP (netsnmp_table_data_set *table, netsnmp_table_row *row)"
+.RI "\fBnetsnmp_table_row\fP * \fBnetsnmp_table_data_set_get_next_row\fP (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .br
 .RI "\fIreturns the next row in the table \fP"
 .ti -1c
-.RI "int \fBnetsnmp_table_set_num_rows\fP (netsnmp_table_data_set *table)"
+.RI "int \fBnetsnmp_table_set_num_rows\fP (\fBnetsnmp_table_data_set\fP *table)"
 .br
 .ti -1c
-.RI "netsnmp_table_data_set_storage * \fBnetsnmp_table_data_set_find_column\fP (netsnmp_table_data_set_storage *start, unsigned int column)"
+.RI "\fBnetsnmp_table_data_set_storage\fP * \fBnetsnmp_table_data_set_find_column\fP (\fBnetsnmp_table_data_set_storage\fP *start, unsigned int column)"
 .br
 .RI "\fIFinds a column within a given storage set, given the pointer to the start of the storage set list. \fP"
 .ti -1c
-.RI "int \fBnetsnmp_mark_row_column_writable\fP (netsnmp_table_row *row, int column, int writable)"
+.RI "int \fBnetsnmp_mark_row_column_writable\fP (\fBnetsnmp_table_row\fP *row, int column, int writable)"
 .br
 .RI "\fImarks a given column in a row as writable or not. \fP"
 .ti -1c
-.RI "int \fBnetsnmp_set_row_column\fP (netsnmp_table_row *row, unsigned int column, int type, const char *value, size_t value_len)"
+.RI "int \fBnetsnmp_set_row_column\fP (\fBnetsnmp_table_row\fP *row, unsigned int column, int type, const char *value, size_t value_len)"
 .br
 .RI "\fIsets a given column in a row with data given a type, value, and length. \fP"
 .ti -1c
-.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_add_index\fP (netsnmp_table_data_set *table, u_char type)"
+.RI "NETSNMP_INLINE void \fBnetsnmp_table_dataset_add_index\fP (\fBnetsnmp_table_data_set\fP *table, u_char type)"
 .br
 .RI "\fIadds an index to the table. \fP"
 .ti -1c
-.RI "void \fBnetsnmp_table_set_add_indexes\fP (netsnmp_table_data_set *tset,...)"
+.RI "void \fBnetsnmp_table_set_add_indexes\fP (\fBnetsnmp_table_data_set\fP *tset,...)"
 .br
 .RI "\fIadds multiple indexes to a table_dataset helper object. \fP"
 .in -1c
@@ -127,14 +128,12 @@ table_dataset \- Helps you implement a table with automatted storage.
 .PP 
 Helps you implement a table with automatted storage. 
 
-This helper is obsolete. If you are writing a new module, please consider using the table_dataset2 helper instead.
-.PP
 This handler helps you implement a table where all the data is expected to be stored within the agent itself and not in some external storage location. It handles all MIB requests including GETs, GETNEXTs and SETs. It's possible to simply create a table without actually ever defining a handler to be called when SNMP requests come in. To use the data, you can either attach a sub-handler that merely uses/manipulates the data further when requests come in, or you can loop through it externally when it's actually needed. This handler is most useful in cases where a table is holding configuration data for something which gets triggered via another event.
 .PP
 NOTE NOTE NOTE: This helper isn't complete and is likely to change somewhat over time. Specifically, the way it stores data internally may change drastically. 
 .SH "Function Documentation"
 .PP 
-.SS "netsnmp_table_data_set* netsnmp_create_table_data_set (const char * table_name)"
+.SS "\fBnetsnmp_table_data_set\fP* netsnmp_create_table_data_set (const char *table_name)"
 .PP
 Create a netsnmp_table_data_set structure given a table_data definition. 
 .PP
@@ -142,23 +141,23 @@ Create a netsnmp_table_data_set structure given a table_data definition.
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 80 of file table_dataset.c.
-.SS "NETSNMP_INLINE netsnmp_table_data_set* netsnmp_extract_table_data_set (\fBnetsnmp_request_info\fP * request)"
+Definition at line 77 of file table_dataset.c.
+.SS "NETSNMP_INLINE \fBnetsnmp_table_data_set\fP* netsnmp_extract_table_data_set (\fBnetsnmp_request_info\fP *request)"
 .PP
 extracts a netsnmp_table_data_set pointer from a given request 
 .PP
-Definition at line 816 of file table_dataset.c.
-.SS "netsnmp_table_data_set_storage* netsnmp_extract_table_data_set_column (\fBnetsnmp_request_info\fP * request, unsigned int column)"
+Definition at line 819 of file table_dataset.c.
+.SS "\fBnetsnmp_table_data_set_storage\fP* netsnmp_extract_table_data_set_column (\fBnetsnmp_request_info\fP *request, unsigned intcolumn)"
 .PP
 extracts a netsnmp_table_data_set pointer from a given request 
 .PP
-Definition at line 826 of file table_dataset.c.
-.SS "\fBnetsnmp_mib_handler\fP* netsnmp_get_table_data_set_handler (netsnmp_table_data_set * data_set)"
+Definition at line 829 of file table_dataset.c.
+.SS "\fBnetsnmp_mib_handler\fP* netsnmp_get_table_data_set_handler (\fBnetsnmp_table_data_set\fP *data_set)"
 .PP
 Given a netsnmp_table_data_set definition, create a handler for it. 
 .PP
-Definition at line 356 of file table_dataset.c.
-.SS "int netsnmp_mark_row_column_writable (netsnmp_table_row * row, int column, int writable)"
+Definition at line 353 of file table_dataset.c.
+.SS "int netsnmp_mark_row_column_writable (\fBnetsnmp_table_row\fP *row, intcolumn, intwritable)"
 .PP
 marks a given column in a row as writable or not. 
 .PP
@@ -166,12 +165,10 @@ marks a given column in a row as writable or not.
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 1174 of file table_dataset.c.
-.SS "void netsnmp_register_auto_data_table (netsnmp_table_data_set * table_set, char * registration_name)"
+Definition at line 1177 of file table_dataset.c.
+.SS "void netsnmp_register_auto_data_table (\fBnetsnmp_table_data_set\fP *table_set, char *registration_name)"
 .PP
-registers a table_dataset so that the 'add_row' snmpd.conf token can be used to add data to this table. 
-.PP
-If registration_name is NULL then the name used when the table was created will be used instead.
+registers a table_dataset so that the 'add_row' snmpd.conf token can be used to add data to this table. If registration_name is NULL then the name used when the table was created will be used instead.
 .PP
 \fBTodo\fP
 .RS 4
@@ -184,68 +181,60 @@ create a properly free'ing registeration pointer for the datalist, and get the d
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 853 of file table_dataset.c.
-.SS "int netsnmp_register_table_data_set (\fBnetsnmp_handler_registration\fP * reginfo, netsnmp_table_data_set * data_set, \fBnetsnmp_table_registration_info\fP * table_info)"
+Definition at line 856 of file table_dataset.c.
+.SS "int netsnmp_register_table_data_set (\fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_table_data_set\fP *data_set, \fBnetsnmp_table_registration_info\fP *table_info)"
 .PP
-register a given data_set at a given oid (specified in the netsnmp_handler_registration pointer). 
-.PP
-The reginfo->handler->access_method *may* be null if the call doesn't ever want to be called for SNMP operations. 
+register a given data_set at a given oid (specified in the netsnmp_handler_registration pointer). The reginfo->handler->access_method *may* be null if the call doesn't ever want to be called for SNMP operations. 
 .PP
 \fBExamples: \fP
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 382 of file table_dataset.c.
-.SS "int netsnmp_set_row_column (netsnmp_table_row * row, unsigned int column, int type, const char * value, size_t value_len)"
+Definition at line 379 of file table_dataset.c.
+.SS "int netsnmp_set_row_column (\fBnetsnmp_table_row\fP *row, unsigned intcolumn, inttype, const char *value, size_tvalue_len)"
 .PP
-sets a given column in a row with data given a type, value, and length. 
-.PP
-Data is memdup'ed by the function. 
+sets a given column in a row with data given a type, value, and length. Data is memdup'ed by the function. 
 .PP
 \fBExamples: \fP
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 1209 of file table_dataset.c.
-.SS "netsnmp_table_row* netsnmp_table_data_set_clone_row (netsnmp_table_row * row)"
+Definition at line 1212 of file table_dataset.c.
+.SS "\fBnetsnmp_table_row\fP* netsnmp_table_data_set_clone_row (\fBnetsnmp_table_row\fP *row)"
 .PP
 clones a dataset row, including all data. 
 .PP
-
-.PP
-Definition at line 92 of file table_dataset.c.
-.SS "netsnmp_table_row* netsnmp_table_data_set_create_row_from_defaults (netsnmp_table_data_set_storage * defrow)"
+Definition at line 89 of file table_dataset.c.
+.SS "\fBnetsnmp_table_row\fP* netsnmp_table_data_set_create_row_from_defaults (\fBnetsnmp_table_data_set_storage\fP *defrow)"
 .PP
 creates a new row from an existing defined default set 
 .PP
-Definition at line 226 of file table_dataset.c.
-.SS "netsnmp_table_data_set_storage* netsnmp_table_data_set_find_column (netsnmp_table_data_set_storage * start, unsigned int column)"
+Definition at line 223 of file table_dataset.c.
+.SS "\fBnetsnmp_table_data_set_storage\fP* netsnmp_table_data_set_find_column (\fBnetsnmp_table_data_set_storage\fP *start, unsigned intcolumn)"
 .PP
 Finds a column within a given storage set, given the pointer to the start of the storage set list. 
 .PP
-Definition at line 1162 of file table_dataset.c.
-.SS "netsnmp_table_row* netsnmp_table_data_set_get_first_row (netsnmp_table_data_set * table)"
+Definition at line 1165 of file table_dataset.c.
+.SS "\fBnetsnmp_table_row\fP* netsnmp_table_data_set_get_first_row (\fBnetsnmp_table_data_set\fP *table)"
 .PP
 returns the first row in the table 
 .PP
-Definition at line 1131 of file table_dataset.c.
-.SS "netsnmp_table_row* netsnmp_table_data_set_get_next_row (netsnmp_table_data_set * table, netsnmp_table_row * row)"
+Definition at line 1134 of file table_dataset.c.
+.SS "\fBnetsnmp_table_row\fP* netsnmp_table_data_set_get_next_row (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .PP
 returns the next row in the table 
 .PP
-Definition at line 1138 of file table_dataset.c.
-.SS "NETSNMP_INLINE void netsnmp_table_dataset_add_index (netsnmp_table_data_set * table, u_char type)"
+Definition at line 1141 of file table_dataset.c.
+.SS "NETSNMP_INLINE void netsnmp_table_dataset_add_index (\fBnetsnmp_table_data_set\fP *table, u_chartype)"
 .PP
-adds an index to the table. 
-.PP
-Call this repeatly for each index. 
+adds an index to the table. Call this repeatly for each index. 
 .PP
 \fBExamples: \fP
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 1263 of file table_dataset.c.
-.SS "NETSNMP_INLINE void netsnmp_table_dataset_add_row (netsnmp_table_data_set * table, netsnmp_table_row * row)"
+Definition at line 1266 of file table_dataset.c.
+.SS "NETSNMP_INLINE void netsnmp_table_dataset_add_row (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .PP
 adds a new row to a dataset table 
 .PP
@@ -253,66 +242,58 @@ adds a new row to a dataset table
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 171 of file table_dataset.c.
-.SS "NETSNMP_INLINE void netsnmp_table_dataset_delete_all_data (netsnmp_table_data_set_storage * data)"
+Definition at line 168 of file table_dataset.c.
+.SS "NETSNMP_INLINE void netsnmp_table_dataset_delete_all_data (\fBnetsnmp_table_data_set_storage\fP *data)"
 .PP
 deletes all the data from this node and beyond in the linked list 
 .PP
-Definition at line 148 of file table_dataset.c.
-.SS "NETSNMP_INLINE netsnmp_table_data_set_storage* netsnmp_table_dataset_delete_data (netsnmp_table_data_set_storage * data)"
+Definition at line 145 of file table_dataset.c.
+.SS "NETSNMP_INLINE \fBnetsnmp_table_data_set_storage\fP* netsnmp_table_dataset_delete_data (\fBnetsnmp_table_data_set_storage\fP *data)"
 .PP
-deletes a single dataset table data. 
+deletes a single dataset table data. returns the (possibly still good) next pointer of the deleted data object. 
 .PP
-returns the (possibly still good) next pointer of the deleted data object. 
-.PP
-Definition at line 135 of file table_dataset.c.
-.SS "NETSNMP_INLINE void netsnmp_table_dataset_delete_row (netsnmp_table_row * row)"
+Definition at line 132 of file table_dataset.c.
+.SS "NETSNMP_INLINE void netsnmp_table_dataset_delete_row (\fBnetsnmp_table_row\fP *row)"
 .PP
 deletes all the data from this node and beyond in the linked list 
 .PP
-Definition at line 158 of file table_dataset.c.
-.SS "NETSNMP_INLINE void netsnmp_table_dataset_remove_and_delete_row (netsnmp_table_data_set * table, netsnmp_table_row * row)"
+Definition at line 155 of file table_dataset.c.
+.SS "NETSNMP_INLINE void netsnmp_table_dataset_remove_and_delete_row (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .PP
 removes a row from the table and then deletes it (and all its data) 
 .PP
-Definition at line 203 of file table_dataset.c.
-.SS "NETSNMP_INLINE void netsnmp_table_dataset_remove_row (netsnmp_table_data_set * table, netsnmp_table_row * row)"
+Definition at line 200 of file table_dataset.c.
+.SS "NETSNMP_INLINE void netsnmp_table_dataset_remove_row (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *row)"
 .PP
 removes a row from the table, but doesn't delete/free the column values 
 .PP
-Definition at line 192 of file table_dataset.c.
-.SS "NETSNMP_INLINE void netsnmp_table_dataset_replace_row (netsnmp_table_data_set * table, netsnmp_table_row * origrow, netsnmp_table_row * newrow)"
+Definition at line 189 of file table_dataset.c.
+.SS "NETSNMP_INLINE void netsnmp_table_dataset_replace_row (\fBnetsnmp_table_data_set\fP *table, \fBnetsnmp_table_row\fP *origrow, \fBnetsnmp_table_row\fP *newrow)"
 .PP
 adds a new row to a dataset table 
 .PP
-Definition at line 181 of file table_dataset.c.
-.SS "int netsnmp_table_set_add_default_row (netsnmp_table_data_set * table_set, unsigned int column, int type, int writable, void * default_value, size_t default_value_len)"
+Definition at line 178 of file table_dataset.c.
+.SS "int netsnmp_table_set_add_default_row (\fBnetsnmp_table_data_set\fP *table_set, unsigned intcolumn, inttype, intwritable, void *default_value, size_tdefault_value_len)"
 .PP
-adds a new default row to a table_set. 
-.PP
-Arguments should be the table_set, column number, variable type and finally a 1 if it is allowed to be writable, or a 0 if not. If the default_value field is not NULL, it will be used to populate new valuse in that column fro newly created rows. It is copied into the storage template (free your calling argument).
+adds a new default row to a table_set. Arguments should be the table_set, column number, variable type and finally a 1 if it is allowed to be writable, or a 0 if not. If the default_value field is not NULL, it will be used to populate new valuse in that column fro newly created rows. It is copied into the storage template (free your calling argument).
 .PP
 returns SNMPERR_SUCCESS or SNMPERR_FAILURE 
 .PP
-Definition at line 252 of file table_dataset.c.
-.SS "void netsnmp_table_set_add_indexes (netsnmp_table_data_set * tset,  ...)"
+Definition at line 249 of file table_dataset.c.
+.SS "void netsnmp_table_set_add_indexes (\fBnetsnmp_table_data_set\fP *tset, ...)"
 .PP
-adds multiple indexes to a table_dataset helper object. 
+adds multiple indexes to a table_dataset helper object. To end the list, use a 0 after the list of ASN index types. 
 .PP
-To end the list, use a 0 after the list of ASN index types. 
+Definition at line 1277 of file table_dataset.c.
+.SS "void netsnmp_table_set_multi_add_default_row (\fBnetsnmp_table_data_set\fP *tset, ...)"
 .PP
-Definition at line 1274 of file table_dataset.c.
-.SS "void netsnmp_table_set_multi_add_default_row (netsnmp_table_data_set * tset,  ...)"
-.PP
-adds multiple data column definitions to each row. 
-.PP
-Functionally, this is a wrapper around calling netsnmp_table_set_add_default_row repeatedly for you. 
+adds multiple data column definitions to each row. Functionally, this is a wrapper around calling netsnmp_table_set_add_default_row repeatedly for you. 
 .PP
 \fBExamples: \fP
 .in +1c
 \fBdata_set.c\fP.
 .PP
-Definition at line 313 of file table_dataset.c.
+Definition at line 310 of file table_dataset.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
