--- a/net-snmp/man/netsnmp_table_generic.3
+++ b/net-snmp/man/netsnmp_table_generic.3
@@ -1,40 +1,38 @@
-.TH "generic_table_API" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "generic_table_API" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-generic_table_API \- General requirements for a table helper.  
-
+generic_table_API \- 
 .PP
+General requirements for a table helper.  
+
 .SS "Modules"
 
 .in +1c
 .ti -1c
 .RI "\fBtable_maintenance\fP"
 .br
-.RI "\fIRoutines for maintaining the contents of a table. \fP"
 .PP
-.in +1c
 
+.RI "\fIRoutines for maintaining the contents of a table. \fP"
 .ti -1c
 .RI "\fBmib_maintenance\fP"
 .br
-.RI "\fIRoutines for maintaining a MIB table. \fP"
 .PP
-.in +1c
 
+.RI "\fIRoutines for maintaining a MIB table. \fP"
 .ti -1c
 .RI "\fBtable_rows\fP"
 .br
-.RI "\fIRoutines for working with the rows of a table. \fP"
 .PP
-.in +1c
 
+.RI "\fIRoutines for working with the rows of a table. \fP"
 .ti -1c
 .RI "\fBtable_indexes\fP"
 .br
-.RI "\fIRoutines for working with row indexes. \fP"
 .PP
 
+.RI "\fIRoutines for working with row indexes. \fP"
 .in -1c
 .SH "Detailed Description"
 .PP 
