--- a/net-snmp/man/netsnmp_util.3
+++ b/net-snmp/man/netsnmp_util.3
@@ -1,4 +1,4 @@
-.TH "Memory Utility Routines" 3 "31 May 2009" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
+.TH "Memory Utility Routines" 3 "Mon Mar 14 2011" "Version 5.3.2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -187,7 +187,7 @@ Memory Utility Routines \-
 .ti -1c
 .RI "u_long \fBuatime_hdiff\fP (marker_t first, marker_t second)"
 .br
-.RI "\fIReturns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs). \fP"
+.RI "\fIReturns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs) \fP"
 .ti -1c
 .RI "int \fBatime_ready\fP (marker_t pm, int deltaT)"
 .br
@@ -213,9 +213,7 @@ Memory Utility Routines \-
 .in -1c
 .SH "Define Documentation"
 .PP 
-.SS "#define DIFFTIMEVAL(now, then, diff)"
-.PP
-\fBValue:\fP
+.SS "#define DIFFTIMEVAL(now, then, diff)"\fBValue:\fP
 .PP
 .nf
 {                                                     \
@@ -231,9 +229,7 @@ Memory Utility Routines \-
 .fi
 .PP
 Definition at line 120 of file tools.h.
-.SS "#define ISTRANSFORM(ttype, toid)"
-.PP
-\fBValue:\fP
+.SS "#define ISTRANSFORM(ttype, toid)"\fBValue:\fP
 .PP
 .nf
 !snmp_oid_compare(ttype, USM_LENGTH_OID_TRANSFORM,            \
@@ -241,9 +237,7 @@ Definition at line 120 of file tools.h.
 .fi
 .PP
 Definition at line 139 of file tools.h.
-.SS "#define QUITFUN(e, l)"
-.PP
-\fBValue:\fP
+.SS "#define QUITFUN(e, l)"\fBValue:\fP
 .PP
 .nf
 if ( (e) != SNMPERR_SUCCESS) {   \
@@ -262,28 +256,20 @@ Definition at line 53 of file tools.h.
 .PP
 Mallocs memory of sizeof(struct s), zeros it and returns a pointer to it. 
 .PP
-
-.PP
 Definition at line 64 of file tools.h.
 .SS "#define SNMP_MALLOC_TYPEDEF(td)   (td *) calloc(1, sizeof(td))"
 .PP
 Mallocs memory of sizeof(t), zeros it and returns a pointer to it. 
-.PP
-
 .PP
 Definition at line 68 of file tools.h.
 .SS "#define SNMP_MAX(a, b)   ((a) > (b) ? (a) : (b))"
 .PP
 Computers the maximum of a and b. 
 .PP
-
-.PP
 Definition at line 85 of file tools.h.
 .SS "#define SNMP_MIN(a, b)   ((a) > (b) ? (b) : (a))"
 .PP
 Computers the minimum of a and b. 
-.PP
-
 .PP
 Definition at line 89 of file tools.h.
 .SS "#define SNMP_SWIPE_MEM(n, s)   do { if (n) free((void *)n); n = s; s=NULL; } while(0)"
@@ -295,38 +281,32 @@ Definition at line 57 of file tools.h.
 .PP
 Zeros l bytes of memory starting at s. 
 .PP
-
-.PP
 Definition at line 72 of file tools.h.
 .SH "Function Documentation"
 .PP 
-.SS "long atime_diff (marker_t first, marker_t second)"
+.SS "long atime_diff (marker_tfirst, marker_tsecond)"
 .PP
 Returns the difference (in msec) between the two markers. 
 .PP
-Definition at line 795 of file tools.c.
+Definition at line 798 of file tools.c.
 .SS "marker_t atime_newMarker (void)"
 .PP
-create a new time marker. 
+create a new time marker. NOTE: Caller must free time marker when no longer needed. 
 .PP
-NOTE: Caller must free time marker when no longer needed. 
-.PP
-Definition at line 771 of file tools.c.
-.SS "int atime_ready (marker_t pm, int deltaT)"
+Definition at line 774 of file tools.c.
+.SS "int atime_ready (marker_tpm, intdeltaT)"
 .PP
 Test: Has (marked time plus delta) exceeded current time (in msec) ? Returns 0 if test fails or cannot be tested (no marker). 
 .PP
-Definition at line 850 of file tools.c.
-.SS "void atime_setMarker (marker_t pm)"
+Definition at line 853 of file tools.c.
+.SS "void atime_setMarker (marker_tpm)"
 .PP
 set a time marker. 
 .PP
-Definition at line 782 of file tools.c.
-.SS "u_int binary_to_hex (const u_char * input, size_t len, char ** output)"
+Definition at line 785 of file tools.c.
+.SS "u_int binary_to_hex (const u_char *input, size_tlen, char **output)"
 .PP
-converts binary to hexidecimal 
-.PP
-\fBParameters:\fP
+converts binary to hexidecimal \fBParameters:\fP
 .RS 4
 \fI*input\fP Binary data. 
 .br
@@ -342,12 +322,10 @@ olen Length of output string not including NULL terminator.
 .PP
 FIX Is there already one of these in the UCD SNMP codebase? The old one should be used, or this one should be moved to \fBsnmplib/snmp_api.c\fP. 
 .PP
-Definition at line 287 of file tools.c.
-.SS "void free_zero (void * buf, size_t size)"
+Definition at line 290 of file tools.c.
+.SS "void free_zero (void *buf, size_tsize)"
 .PP
-zeros memory before freeing it. 
-.PP
-\fBParameters:\fP
+zeros memory before freeing it. \fBParameters:\fP
 .RS 4
 \fI*buf\fP Pointer at bytes to free. 
 .br
@@ -356,12 +334,10 @@ zeros memory before freeing it.
 .PP
 
 .PP
-Definition at line 185 of file tools.c.
-.SS "int hex_to_binary2 (const u_char * input, size_t len, char ** output)"
+Definition at line 188 of file tools.c.
+.SS "int hex_to_binary2 (const u_char *input, size_tlen, char **output)"
 .PP
-hex_to_binary2 
-.PP
-\fBParameters:\fP
+hex_to_binary2 \fBParameters:\fP
 .RS 4
 \fI*input\fP Printable data in base16. 
 .br
@@ -379,12 +355,10 @@ Input of an odd length is right aligned.
 .PP
 FIX Another version of 'hex-to-binary' which takes odd length input strings. It also allocates the memory to hold the binary data. Should be integrated with the official hex_to_binary() function. 
 .PP
-Definition at line 324 of file tools.c.
-.SS "u_char* malloc_random (size_t * size)"
+Definition at line 327 of file tools.c.
+.SS "u_char* malloc_random (size_t *size)"
 .PP
-Returns pointer to allocaed & set buffer on success, size contains number of random bytes filled. 
-.PP
-buf is NULL and *size set to KMT error value upon failure.
+Returns pointer to allocaed & set buffer on success, size contains number of random bytes filled. buf is NULL and *size set to KMT error value upon failure.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -398,17 +372,15 @@ a malloced buffer
 .PP
 
 .PP
-Definition at line 205 of file tools.c.
-.SS "int marker_tticks (marker_t pm)"
+Definition at line 208 of file tools.c.
+.SS "int marker_tticks (marker_tpm)"
 .PP
 Return the number of timeTicks since the given marker. 
 .PP
-Definition at line 898 of file tools.c.
-.SS "int memdup (u_char ** to, const u_char * from, size_t size)"
+Definition at line 901 of file tools.c.
+.SS "int memdup (u_char **to, const u_char *from, size_tsize)"
 .PP
-Duplicates a memory block. 
-.PP
-Copies a existing memory location from a pointer to another, newly malloced, pointer.
+Duplicates a memory block. Copies a existing memory location from a pointer to another, newly malloced, pointer.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -426,19 +398,15 @@ SNMPERR_SUCCESS on success, SNMPERR_GENERR on failure.
 .PP
 
 .PP
-Definition at line 236 of file tools.c.
-.SS "char* netsnmp_getenv (const char * name)"
+Definition at line 239 of file tools.c.
+.SS "char* netsnmp_getenv (const char *name)"
 .PP
-Non Windows: Returns a pointer to the desired environment variable or NULL if the environment variable does not exist. 
+Non Windows: Returns a pointer to the desired environment variable or NULL if the environment variable does not exist. Windows: Returns a pointer to the desired environment variable if it exists. If it does not, the variable is looked up in the registry in HKCU\\Net-SNMP or HKLM\\Net-SNMP (whichever it finds first) and stores the result in the environment variable. It then returns a pointer to environment variable. 
 .PP
-Windows: Returns a pointer to the desired environment variable if it exists. If it does not, the variable is looked up in the registry in HKCU\\Net-SNMP or HKLM\\Net-SNMP (whichever it finds first) and stores the result in the environment variable. It then returns a pointer to environment variable. 
+Definition at line 929 of file tools.c.
+.SS "int netsnmp_hex_to_binary (u_char **buf, size_t *buf_len, size_t *offset, intallow_realloc, const char *hex, const char *delim)"
 .PP
-Definition at line 926 of file tools.c.
-.SS "int netsnmp_hex_to_binary (u_char ** buf, size_t * buf_len, size_t * offset, int allow_realloc, const char * hex, const char * delim)"
-.PP
-convert an ASCII hex string (with specified delimiters) to binary 
-.PP
-\fBParameters:\fP
+convert an ASCII hex string (with specified delimiters) to binary \fBParameters:\fP
 .RS 4
 \fIbuf\fP address of a pointer (pointer to pointer) for the output buffer. If allow_realloc is set, the buffer may be grown via snmp_realloc to accomodate the data.
 .br
@@ -462,17 +430,15 @@ convert an ASCII hex string (with specified delimiters) to binary
 .PP
 
 .PP
-Definition at line 425 of file tools.c.
-.SS "char* netsnmp_strdup_and_null (const u_char * from, size_t from_len)"
+Definition at line 428 of file tools.c.
+.SS "char* netsnmp_strdup_and_null (const u_char *from, size_tfrom_len)"
 .PP
 copies a (possible) unterminated string of a given length into a new buffer and null terminates it as well (new buffer MAY be one byte longer to account for this 
 .PP
-Definition at line 255 of file tools.c.
-.SS "int snmp_hex_to_binary (u_char ** buf, size_t * buf_len, size_t * offset, int allow_realloc, const char * hex)"
+Definition at line 258 of file tools.c.
+.SS "int snmp_hex_to_binary (u_char **buf, size_t *buf_len, size_t *offset, intallow_realloc, const char *hex)"
 .PP
-convert an ASCII hex string to binary 
-.PP
-\fBNote:\fP
+convert an ASCII hex string to binary \fBNote:\fP
 .RS 4
 This is a wrapper which calls netsnmp_hex_to_binary with a delimiter string of ' '.
 .RE
@@ -488,12 +454,10 @@ See netsnmp_hex_to_binary for parameter descriptions.
 .PP
 
 .PP
-Definition at line 485 of file tools.c.
-.SS "int snmp_realloc (u_char ** buf, size_t * buf_len)"
+Definition at line 488 of file tools.c.
+.SS "int snmp_realloc (u_char **buf, size_t *buf_len)"
 .PP
-This function increase the size of the buffer pointed at by *buf, which is initially of size *buf_len. 
-.PP
-Contents are preserved **AT THE BOTTOM END OF THE BUFFER**. If memory can be (re-)allocated then it returns 1, else it returns 0.
+This function increase the size of the buffer pointed at by *buf, which is initially of size *buf_len. Contents are preserved **AT THE BOTTOM END OF THE BUFFER**. If memory can be (re-)allocated then it returns 1, else it returns 0.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -509,22 +473,22 @@ The current re-allocation algorithm is to increase the buffer size by whichever 
 .PP
 
 .PP
-Definition at line 121 of file tools.c.
-.SS "u_long uatime_diff (marker_t first, marker_t second)"
+Definition at line 124 of file tools.c.
+.SS "u_long uatime_diff (marker_tfirst, marker_tsecond)"
 .PP
 Returns the difference (in u_long msec) between the two markers. 
 .PP
-Definition at line 812 of file tools.c.
-.SS "u_long uatime_hdiff (marker_t first, marker_t second)"
+Definition at line 815 of file tools.c.
+.SS "u_long uatime_hdiff (marker_tfirst, marker_tsecond)"
 .PP
-Returns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs). 
+Returns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs) 
 .PP
-Definition at line 830 of file tools.c.
-.SS "int uatime_ready (marker_t pm, unsigned int deltaT)"
+Definition at line 833 of file tools.c.
+.SS "int uatime_ready (marker_tpm, unsigned intdeltaT)"
 .PP
 Test: Has (marked time plus delta) exceeded current time (in msec) ? Returns 0 if test fails or cannot be tested (no marker). 
 .PP
-Definition at line 872 of file tools.c.
+Definition at line 875 of file tools.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
